--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-external-link": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-social-icons": "^5.13.0",
-    "social-media-icons-react": "^1.1.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
